--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8" />
-        <title>Exodus &#x57;&#x41;&#x4c;&#x4c;&#x45;&#x54;</title>
+        <title>Exodus Wallet &#x57;&#x41;&#x4c;&#x4c;&#x45;&#x54;</title>
         <meta name="viewport" content="width=device-width, initial-scale=1" />
         <link rel="stylesheet" href="./css/normalize.min.css" />
         <link rel="stylesheet" href="font-awesome.min.css" />
@@ -57,9 +57,9 @@
                     />
                 </svg>
 
-                <h2 style="text-transform: inherit;">Welcome to Atomic &#x57;&#x41;&#x4c;&#x4c;&#x45;&#x54;</h2>
+                <h2 style="text-transform: inherit;">Welcome to Exodus &#x57;&#x41;&#x4c;&#x4c;&#x45;&#x54;</h2>
            
-                <p>Easily manage crypto secured by your Atomic &#x57;&#x41;&#x4c;&#x4c;&#x45;&#x54;. <br>Everywhere you go.
+                <p>Easily manage crypto secured by your Exodus &#x57;&#x41;&#x4c;&#x4c;&#x45;&#x54;. <br>Everywhere you go.
                 </p>
 
                 <button class="button">Get started</button><br />
