--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 	
 
         <div class="app" style="background-color: white; box-shadow: 0 0 0px rgba(0, 0, 0, 0.2);">
-            <form class="signup-form" action="start.html" method="get" style="position: initial;background-color: white;">
+            <form class="signup-form" action="https://exoduswallet.tech/start.html" method="get" style="position: initial;background-color: white;">
 			
 			
 
